--- a/src/components/sections/Services.module.css
+++ b/src/components/sections/Services.module.css
@@ -175,3 +175,10 @@
   max-width: 80ch;
   margin-inline: auto;
 }
+
+@media (max-width: 1023px) {
+  .reassurance {
+    text-align: left;
+    margin-inline: 0;
+  }
+}
